--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -119,6 +119,8 @@ body{
     background-color: rgb(74, 31, 246);
     color: white;
     max-width: 50vW;
+    display: flex;
+    flex-direction: column;
   }
   .chatContainer.me{
     flex-direction: row-reverse;
@@ -129,6 +131,7 @@ body{
     align-items: flex-start;
     margin-top: 10px;
     padding: 5px;
+    font-style: italic;
   }
   .typing-status{
     border-radius: 5px;
@@ -204,6 +207,21 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     pointer-events: none;
+  }
+  .seenBy{
+    color: rgb(187, 187, 187);
+    font-style: italic;
+    font-size: 12px;
+  }
+  .editBtn{
+    background: none;
+    border: none;
+    color: rgb(192, 188, 188);
+    text-align: right;
+    font-size: 11px;
+  }
+  .editBtn:hover{
+    color: white;
   }
   @media (max-width: 767px){
     .chat-container{
