--- a/src/components/Design.css
+++ b/src/components/Design.css
@@ -48,6 +48,11 @@
     position: relative;
     transition: 0.6s ease;
 }
+.passWarn{
+    font-size: 13px;
+    margin-left: 18px;
+    color: red;
+}
 
 .links{
     display: flex;
@@ -275,5 +280,8 @@ a{
     .inputsUp{
         position: absolute;
         top: 50px;
+    }
+    .passWarn{
+        font-size: 11.5px;
     }
 }
