--- a/src/components/Design.css
+++ b/src/components/Design.css
@@ -222,6 +222,12 @@ a{
 .roomCode:focus{
     border: 2px solid rgb(74, 31, 246);
 }
+#loader{
+    height: 100px;
+    width: 100px;
+    margin-top: 50px;
+    display: flex;
+}
 
 @media (max-width: 767px){
     .container, .cntnr{
