--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -118,6 +118,9 @@ body{
     color: white;
     position: relative;
   }
+  .audioCntrls{
+    display: flex;
+  }
 
   .rply{
   position: absolute;
@@ -282,6 +285,10 @@ body{
   #recording{
     display: flex;
     margin-top: 5px;
+  }
+  .wave{
+    max-width: 250px;
+    overflow: hidden;
   }
   .send{
     width: 40px;
